Fixed the bar with Friend h1 and searchbar on small screens Also, fixed the number of cards in a row on smaller screens

--- a/src/pages/FriendsList/FriendsList.css
+++ b/src/pages/FriendsList/FriendsList.css
@@ -31,9 +31,9 @@ h3.friendsText {
  }
 
  div.friends-search {
-   width: 400px;
+   width: 350px;
    height: 80px;
-   margin-left: 200px;
+   margin: auto;
    display: flex;
    justify-content: center;
    align-items: center;
